--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
           suffered alteration in some form, by injected humour.</p>
       </div>
       <div class="contact-section">
-        <div class="grid bg-red-500 grid-col lg:grid-cols-2">
+        <div class="grid gap-12  grid-col lg:grid-cols-2">
           <div class="grid flex-1 grid-cols-2 my-12">
             <!--contact-inf-->
-            <div class="card px-5 py-10 text-center bg-slate-100 border-b-2 border-r-2 rounded-none">
+            <div class="card px-5 py-10 text-center bg-base-200 border-b-2 border-r-2 border-gray-400	rounded-none">
               <figure><img src="./images/location.png" alt="location" /></figure>
               <div class="card-body space-y-5">
                 <h2 class="text-3xl font-bold garamond">Address</h2>
@@ -318,7 +318,7 @@
                   New York, NY 535022.</p>
               </div>
             </div>
-            <div class="card px-5 py-10 text-center bg-slate-100 border-b-2 rounded-none">
+            <div class="card px-5 py-10 text-center bg-base-200 border-b-2 border-gray-400 rounded-none">
               <figure><img src="./images/call.png" alt="Call Us--" /></figure>
               <div class="card-body space-y-5">
                 <h2 class="text-3xl font-bold garamond">Call Us</h2>
@@ -326,7 +326,7 @@
                   +88 01750 00 00 00</p>
               </div>
             </div>
-            <div class="card px-5 py-10 text-center bg-slate-100 border-r-2 rounded-none">
+            <div class="card px-5 py-10 text-center bg-base-200 border-r-2 border-gray-400 rounded-none">
               <figure><img src="./images/email.png" alt="Email Us" /></figure>
               <div class="card-body space-y-5">
                 <h2 class="text-3xl font-bold garamond">Email Us</h2>
@@ -334,7 +334,7 @@
                   info@gmail.com</p>
               </div>
             </div>
-            <div class="card px-3 py-10 text-center bg-slate-100  rounded-none">
+            <div class="card px-3 py-10 text-center bg-base-200  rounded-none">
               <figure><img src="./images/time.png" alt="Working Hours" /></figure>
               <div class="card-body space-y-5">
                 <h2 class="text-3xl font-bold garamond">Working Hours</h2>
@@ -344,9 +344,13 @@
             </div>
           </div>
           <!-- contact form -->
-          <div class="right-side flex-1 my-12">
-            <input type="text" placeholder="You can't touch this" class="input input-bordered w-full max-w-xs" />
-            
+          <div class="right-side flex-1 my-16">
+            <input type="text" placeholder="Your Name" class="input input-bordered bg-base-200 w-full max-w-xs lg:max-w-lg rounded-xl px-8 py-10 border-0 mb-8" />
+            <input type="text" placeholder="Your Email" class="input input-bordered bg-base-200 w-full max-w-xs lg:max-w-lg rounded-xl px-8 py-10 border-0 mb-8" />
+            <input type="text" placeholder="Subject" class="input input-bordered bg-base-200 w-full max-w-xs lg:max-w-lg rounded-xl px-8 py-10 border-0 mb-8" />
+            <textarea placeholder="Bio" class="textarea textarea-bordered textarea-lg bg-base-200 w-full max-w-xs lg:max-w-lg rounded-xl px-8 pb-16 border-0 mb-8" ></textarea>
+
+            <button class="btn btn-cmn rounded-xl w-full max-w-xs lg:max-w-lg h-16">Send Message</button>
         </div>
 
           
